--- a/index.html
+++ b/index.html
@@ -16,28 +16,24 @@
 
       <section>
         <div class="card-questions">
-          <div class="box-questions">The questions will be present here</div>
+          <div class="box-questions">You will have 75 seconds to answer the questions. /nIf you answer incorrectly, your time will reduce by 10 seconds. Good Luck!</div>
         </div>
       
 
         <div class = "choice-container-1">
-          <p class="choice-prefix">A</p>
-          <p class="choice-text-1">Choice 1</p>
+          <p class="choice-text"></p>
         </div>
 
         <div class = "choice-container-2">
-          <p class="choice-prefix">B</p>
-          <p class="choice-text-2">Choice 2</p>
+          <p class="choice-text"></p>
         </div>
 
         <div class = "choice-container-3">
-          <p class="choice-prefix">C</p>
-          <p class="choice-text-3">Choice 3</p>
+          <p class="choice-text"></p>
         </div>
 
         <div class = "choice-container-4">
-          <p class="choice-prefix">D</p>
-          <p class="choice-text-4">Choice 4</p>
+          <p class="choice-text"></p>
         </div>
 
       </section>
@@ -46,8 +42,7 @@
         <div class="card results">
           <div class = "win-loss-container">
           <div>
-          <h2>Wins: <span class="win">0 </span> </h2>
-          <h2>Losses: <span class="lose">0</span></h2>
+          <h2>Score: <span class="score">0 </span> </h2>
         </div>
           <button class="reset-button">Reset Score</button>
       </div>
